<package>
  <name>duo3d_driver</name>
  <version>1.0.0</version>
  <description>The duo_driver is a ROS driver for the <a href="http://www.duo3d.com/">DUO3D sensor</a>
    for interfacing with the DUO3D device.
  </description>
  <maintainer email="alexp@duo3d.com">Alexander Popovich</maintainer>
  <author>Alexander Popovich</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/duo3d-ros-driver</url>
  <url type="website">http://www.duo3d.com</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pcl_conversions</run_depend>

  <export>
  </export>
</package>
